--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,7 +9,7 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
     /[if lte IE 8] <script src="assets/js/ie/html5shiv.js"></script>
-    %link{:href => "assets/css/main.css", :rel => "stylesheet"}/
+    %link{:href => "toppage/css/main.css", :rel => "stylesheet"}/
     /[if lte IE 8] <link rel="stylesheet" href="assets/css/ie8.css" />
     /[if lte IE 9] <link rel="stylesheet" href="assets/css/ie9.css" />
   %body.loading
