Change link name

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -25,10 +25,10 @@
             %ul
               %li
                 = link_to new_user_session_path do
-                  get started
+                  LOG IN
               %li
                 = link_to new_user_registration_path do
-                  log in
+                  SIGN UP
         / Footer
         %footer#footer
     /[if lte IE 8] <script src="assets/js/ie/respond.min.js"></script>
