--- a/app/views/layouts/admin/_nav.html.haml
+++ b/app/views/layouts/admin/_nav.html.haml
@@ -20,11 +20,7 @@
             %span.angle-down.s7-angle-down
           %ul.dropdown-menu{:role => "menu"}
             %li
-              = link_to '' do
-                %span.icon.s7-user>
-                My profile
-            %li
-              = link_to '' do
+              = link_to setting_user_path(current_user) do
                 %span.icon.s7-config>
                 Settings
             %li
