--- a/app/views/layouts/admin/_left_sidebar.html.haml
+++ b/app/views/layouts/admin/_left_sidebar.html.haml
@@ -18,6 +18,6 @@
           %i.icon.s7-add-user
           %span 友達を追加する
       %li.parent
-        = link_to setting_user_path(current_user) do
+        = link_to edit_user_registration_path do
           %i.icon.s7-settings
           %span 設定
