--- a/app/views/layouts/admin/_nav.html.haml
+++ b/app/views/layouts/admin/_nav.html.haml
@@ -20,7 +20,7 @@
             %span.angle-down.s7-angle-down
           %ul.dropdown-menu{:role => "menu"}
             %li
-              = link_to setting_user_path(current_user) do
+              = link_to edit_user_registration_path do
                 %span.icon.s7-config>
                 Settings
             %li
