--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,36 +1,22 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+.col-md-12
+  .panel.panel-default
+    .panel-heading
+      %h3 Basic Elements
+    .panel-body
+      = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal group-border-dashed', style: 'border-radius: 0px;' }) do |f|
+        = devise_error_messages!
+        .form-group
+          %label.col-sm-3.control-label username
+          .col-sm-6
+            = f.text_field :name, class: 'form-control'
+        .form-group
+          %label.col-sm-3.control-label image
+          .col-sm-6
+            = f.file_field :image, class: 'form-contol'
+        .form-group
+          %label.col-sm-3.control-label password
+          .col-sm-6
+            = f.password_field :current_password, class: 'form-contol'
+        .form-group
+          .col-sm-2
+            = f.submit 'done', class: 'btn btn-primary'
