--- a/app/views/layouts/admin/_left_sidebar.html.haml
+++ b/app/views/layouts/admin/_left_sidebar.html.haml
@@ -6,7 +6,7 @@
           %i.icon.s7-users
           %span 友達
       %li.parent
-        = link_to talks_user_path(current_user) do
+        = link_to user_chat_rooms_path(current_user) do
           %i.icon.s7-chat
           %span トークルーム
       %li.parent
