--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -18,5 +18,5 @@
           .col-sm-6
             = f.password_field :current_password, class: 'form-contol'
         .form-group
-          .col-sm-2
+          .col-sm-offset-3.col-sm-2
             = f.submit 'done', class: 'btn btn-primary'
