--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -26,7 +26,7 @@
                 .content.nano-content{:style => "margin-right: 0px;"}
                   %ul
                     - @chat_room.messages.includes(:user).each do |message|
-                      - if message.user.id == current_user
+                      - if message.user.id == current_user.id
                         %li.self
                           .msg= message.content
                       - else
