Change breadcrumb description

--- a/app/views/chat_rooms/index.html.haml
+++ b/app/views/chat_rooms/index.html.haml
@@ -1,11 +1,9 @@
 .page-head
-  %h2 Tables
+  %h2 Chat Room
   %ol.breadcrumb
     %li
       %a{:href => "#"} Home
-    %li
-      %a{:href => "#"} Tables
-    %li.active General
+    %li.active chat room
 .main-content
   .row
     .col-sm-12
