--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,11 +1,9 @@
 .page-head
-  %h2 Tables
+  %h2 your friends
   %ol.breadcrumb
     %li
       %a{:href => "#"} Home
-    %li
-      %a{:href => "#"} Tables
-    %li.active General
+    %li.active
 .main-content
   .row
     .col-md-12
