--- a/app/views/users/add_friends.html.haml
+++ b/app/views/users/add_friends.html.haml
@@ -1,11 +1,9 @@
 .page-head
-  %h2 Tables
+  %h2 Add friend
   %ol.breadcrumb
     %li
       %a{:href => "#"} Home
-    %li
-      %a{:href => "#"} Tables
-    %li.active search friend
+    %li.active add friend
 .main-content
   .row
     .col-sm-12
