--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -14,21 +14,21 @@
                     #nick-handler.input-group
                       %span.input-group-addon
                         %i.icon.s7-user
-                      = f.text_field :name, class: "form-control", placeholder: "user name"
+                      = f.text_field :name, class: "form-control", placeholder: "user name", required: true
                   .form-group
                     #email-handler.input-group
                       %span.input-group-addon
                         %i.icon.s7-mail
-                      = f.email_field :email, class: "form-control", placeholder: "email"
+                      = f.email_field :email, class: "form-control", placeholder: "email", required: true
                   .form-group.row
                     .col-xs-6
                       #password-handler.input-group
                         %span.input-group-addon
                           %i.icon.s7-lock
-                        = f.password_field :password, class: "form-control", placeholder: 'password'
+                        = f.password_field :password, class: "form-control", placeholder: 'password', required: true
                     .col-xs-6
                       #confirm-handler.input-group
                         %span.input-group-addon
                           %i.icon.s7-lock
-                        = f.password_field :password_confirmation, class: "form-control", placeholder: 'password confimation'
+                        = f.password_field :password_confirmation, class: "form-control", placeholder: 'password confimation', required: true
                 %button.btn.btn-block.btn-primary.btn-lg{:type => "submit"} Sign Up
